force-app/main/default/objects/PartyRoleRelation.object
<CustomObject>
    <fields>
        <fullName>Default_Hierarchy_Type__c</fullName>
        <description>This field is used to populate the Hierarchy Type field when connecting individuals to other individuals or groups. It is used to place that relationship above, at the same level, or below others in the Actionable Relationship Center.</description>
        <inlineHelpText>This field describes the relationship between the Role and the Related Role, as one that is higher (Parent), equal (Peer), or lower (Child).</inlineHelpText>
        <label>Default Hierarchy Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                    <default>true</default>
                    <label>Parent</label>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Peer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate Family</fullName>
                </value>
                <value>
                    <fullName>Extended Family</fullName>
                </value>
                <value>
                    <fullName>Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Group_Affiliations_AAR</fullName>
        <columns>Name</columns>
        <columns>RelatedInverseRecord</columns>
        <columns>RelatedRoleName</columns>
        <columns>RelationshipObjectName</columns>
        <columns>ShouldCreaInversRoleAuto</columns>
        <columns>RoleName</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RelationshipObjectName</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Group Affiliations (AAR)</label>
    </listViews>
    <listViews>
        <fullName>Individual_Relationships_CCR</fullName>
        <columns>Name</columns>
        <columns>RelatedInverseRecord</columns>
        <columns>RelatedRoleName</columns>
        <columns>RelationshipObjectName</columns>
        <columns>ShouldCreaInversRoleAuto</columns>
        <columns>RoleName</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RelationshipObjectName</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Individual Relationships (CCR)</label>
    </listViews>
</CustomObject>