force-app/main/default/objects/PartyRoleRelation/fields/Represents_Spousal_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Represents_Spousal_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, this will prompt a user to add a household for the spouse if none exists.</description>
    <inlineHelpText>When selected, this will prompt a user to add a household for the spouse if none exists.</inlineHelpText>
    <label>Represents Spousal Relationship</label>
    <type>Checkbox</type>
</CustomField>