force-app/main/default/objects/PartyRoleRelation/listViews/All_Party_Role_Relationships.listView-meta.xml
<ListView>
    <fullName>All_Party_Role_Relationships</fullName>
    <columns>Name</columns>
    <columns>RelatedInverseRecord</columns>
    <columns>RelatedRoleName</columns>
    <columns>RelationshipObjectName</columns>
    <columns>ShouldCreaInversRoleAuto</columns>
    <columns>RoleName</columns>
    <filterScope>Everything</filterScope>
    <label>All Party Role Relationships</label>
</ListView>