force-app/main/default/objects/PartyRoleRelation/listViews/Group_Affiliations_AAR.listView-meta.xml
<ListView>
    <fullName>Group_Affiliations_AAR</fullName>
    <columns>Name</columns>
    <columns>RelatedInverseRecord</columns>
    <columns>RelatedRoleName</columns>
    <columns>RelationshipObjectName</columns>
    <columns>ShouldCreaInversRoleAuto</columns>
    <columns>RoleName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RelationshipObjectName</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Group Affiliations (AAR)</label>
</ListView>