force-app/main/default/objects/PartyRoleRelation/listViews/Individual_Relationships_CCR.listView-meta.xml
<ListView>
    <fullName>Individual_Relationships_CCR</fullName>
    <columns>Name</columns>
    <columns>RelatedInverseRecord</columns>
    <columns>RelatedRoleName</columns>
    <columns>RelationshipObjectName</columns>
    <columns>ShouldCreaInversRoleAuto</columns>
    <columns>RoleName</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RelationshipObjectName</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Individual Relationships (CCR)</label>
</ListView>